ElementVisibilityObserver: use ExecutionContext's document.

The IntersectionObserver code assumes that the document passed as root
always has a frame but an Element's owner document might not. Using the
ExecutionContext's document in ElementVisibilityObserver solves issues
by making the internal API behaviour closer to the external one.

BUG=654082

Review-Url: https://codereview.chromium.org/2401303002
Cr-Commit-Position: refs/heads/master@{#425099}