third_party/WebKit/Source/core/dom/ElementVisibilityObserver.h
@@ -6,6 +6,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef ElementVisibilityObserver_h
 #define ElementVisibilityObserver_h
 
+#include "core/CoreExport.h"
 #include "core/dom/IntersectionObserver.h"
 #include "platform/heap/Heap.h"
 #include "platform/heap/Member.h"
@@ -23,7 +24,7 @@ class Element;
 // The ElementVisibilityObserver is implemented on top of IntersectionObserver.
 // It is a layer meant to simplify the usage for C++ Blink code checking for the
 // visibility of an element.
-class ElementVisibilityObserver final
+class CORE_EXPORT ElementVisibilityObserver final
     : public GarbageCollectedFinalized<ElementVisibilityObserver> {
   WTF_MAKE_NONCOPYABLE(ElementVisibilityObserver);
 
